# ppE

./: __init__.py  ppE.py  pyproject.toml  utils.py
docs/: requirements.txt
docs/source/: WaveformGeneratorPPE.rst  conf.py  index.rst  installation.rst
plots/: info.txt
plots/aLIGO_vs_CE/: info.txt
plots/final/: bGR-bGR-test  bGR-bGR-test.py
utils/: utils.py
