[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "ppE"
authors = [{name = "Ryan Johnson", email = "ryansr71@csu.fullerton.edu"},{name = "Marceline Bonilla", email = "gsbonilla@fullerton.edu"}]
dynamic = ["version", "description"]
dependencies = ['numpy','bilby','scipy']
